refactor(fix-lobby): Reduced warnings